<resources>
    <string name="app_name">finalProject</string>
    <string name="calendar">CALENDAR</string>
    <string name="watnaw">WATNAW</string>
    <string name="check_schedule">Check Schedule</string>
    <string name="todo_list">ToDo List</string>
    <string name="check_calendar">Check Calendar</string>
    <string name="todo">TODO</string>
    <string name="to_do_list">TO DO LIST</string>
    <string name="enter_a_new_item">Enter a new item</string>
    <string name="add_item">Add Item</string>
    <string name="title_activity_schedule_click">ScheduleClick</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
