<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ToDo">

    <Button
        android:id="@+id/todo_back_button"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/abc_vector_test"
        tools:ignore="PrivateResource" />

    <TextView
        android:id="@+id/date_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/to_do_list"
        android:textColor="@android:color/background_dark"
        android:textStyle="bold"
        android:textSize="50sp"
        android:layout_centerHorizontal="true"/>
    <ListView
        android:id="@+id/list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/add_button"
        android:layout_marginTop="80dp"/>

    <EditText
        android:id="@+id/new_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/add_button"
        android:hint="@string/enter_a_new_item"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/add_button"
        android:layout_alignParentBottom="true"
        android:autofillHints="Type new todo item here"/>

    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_item"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"/>

</RelativeLayout>